# parser

./: README.md  oper_system.py
divanboss_parser/: pyproject.toml
divanboss_parser/divanboss_parser/: settings.py
divanboss_parser/divanboss_parser/spiders/: oper_system.py
ozon_parser/: pyproject.toml  scrapy.cfg
ozon_parser/ozon_parser/: items.py  piplines.py  settings.py
ozon_parser/ozon_parser/spiders/: oper_system.py
