[tool.poetry]
name = "ozon-parser"
version = "0.1.0"
description = ""
authors = ["«Selezneva <petrukhina.marina2011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.18.1"
scrapy = "^2.11.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
